--- a/js-dev/i18n/en/index.html
+++ b/js-dev/i18n/en/index.html
@@ -17,6 +17,7 @@
     email="application.state.email"
     on-action="application.action()"></my-form>
 
+  <script>var require = { paths: { i18n: "i18n/ru" } };</script>
   <script data-main="../../config" src="../../require.js"></script>
 </body>
 </html>
